All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_To_Repair__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPM - Mean Time To Repair</relationshipLabel>
    <relationshipName>SPM_Mean_Time_To_Repair_del1</relationshipName>
    <type>Lookup</type>
</CustomField>