All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_To_Repair__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Case</description>
    <inlineHelpText>Lookup to Case</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SPM - Mean Time To Repair</relationshipLabel>
    <relationshipName>SPM_Mean_Time_To_Repair</relationshipName>
    <type>Lookup</type>
</CustomField>