All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_To_Repair__c/fields/Dead_Time__c.field-meta.xml
<CustomField>
    <fullName>Dead_Time__c</fullName>
    <description>This field is used to capture the idle time</description>
    <label>Dead Time (In Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>