All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_To_Repair__c/fields/Primary_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Primary_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Primary Work Order</description>
    <inlineHelpText>Lookup to Primary Work Order</inlineHelpText>
    <label>Primary Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>SPM - Mean Time To Repair (Primary Work Order)</relationshipLabel>
    <relationshipName>SPM_Mean_Time_To_Repair1</relationshipName>
    <type>Lookup</type>
</CustomField>