All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_To_Repair__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>MTTR</relationshipName>
    <type>Lookup</type>
</CustomField>