All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_To_Repair__c/fields/Service_Delivered_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivered_On_Date__c</fullName>
    <description>This field is used to capture the service delivered date</description>
    <label>Service Delivered On - Date</label>
    <type>Date</type>
</CustomField>