All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_To_Repair__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Technician</description>
    <label>Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipName>MTTR</relationshipName>
    <type>Lookup</type>
</CustomField>